<resources>
    <string name="app_name">MAGI</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="olvidaste_tu_contraseña" />
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="icono_magi">Icono MAGI</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="logo_magi">Logo MAGI</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="bienvenido_magi">Bienvenido a M.A.G.I</string>
    <string name="modulo_fichajes">Fichajes</string>
    <string name="modulo_informes">Informes</string>
    <string name="modulo_guardias">Guardias</string>
    <string name="modulo_otros">Más</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="abrir_menu">Abrir Menu</string>

    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>
    <string name="historico">Histórico</string>
    <string name="exportar_pdf">Exportar a PDF</string>
    <string name="menu_magi">menu M.A.G.I</string>
    <string name="periodo_semana">Semana</string>
    <string name="periodo_mes">Mes</string>
    <string name="periodo_trimestre">Trimestre</string>
    <string name="periodo_curso">Curso\n</string>
    <string name="periodo_personalizado">Personalizado</string>
    <string name="filtro_docente">Docente</string>
    <string name="filtro_desde">Desde</string>
    <string name="filtro_hasta">Hasta</string>
    <string name="ver_exportar_pdf">Exportar a PDF</string>
    <string name="informe_default">Selecciona un periodo para ver el informe</string>
    <string name="filtro_tipo">Filtrar por</string>
    <string name="filtro_elegir">Elegir</string>
    <string name="filtro_rango">Rango de fechas</string>
    <string name="nombre_completo">Nombre completo\n</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta_iniciar_sesion">¿Ya tienes cuenta? Iniciar sesión</string>
    <string name="cd_profile_photo">PlaceHolder Foto\n</string>
    <string name="ajustes">Ajustes\n</string>
    <string name="activar_notificaciones">Activar Notificaciones</string>
    <string name="cambiar_contraseña">Cambiar Contraseña</string>
    <string name="version_app_prefix">M.A.G.I Versión 1.2</string>


</resources>
