<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF">



    <!-- Logo principal, más grande -->
    <ImageView
        android:id="@+id/logoIcon"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/icono_magi"
        android:src="@drawable/logo_icon"
        android:background="@color/blanco"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
    <!-- Comentario para ver si se hace bien el comit o yo que se-->
    <!-- Texto MAGI, un poco más pequeño y centrado -->
    <ImageView
        android:id="@+id/logoText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_magi"
        android:scaleType="centerInside"
        android:src="@drawable/logo_text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoIcon"
        tools:visibility="visible" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutDni"
        android:hint="@string/usuario"
        android:textColorHint="@color/amarillo_magi_50"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/gris_magi"
        app:hintTextColor="@color/amarillo_magi"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoText">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColorHint="@color/amarillo_magi"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:hint="@string/contrase_a"
        android:textColorHint="@color/amarillo_magi_50"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        app:hintTextColor="@color/amarillo_magi"
        app:boxStrokeColor="@color/gris_magi"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutDni"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/amarillo_magi"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/amarillo_magi"
        android:text="@string/iniciar_sesi_n"
        android:textAllCaps="false"
        android:textColor="@color/gris_oscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />




    <TextView
        android:id="@+id/tvSignUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tienes_cuenta_reg_strate"
        android:textSize="14sp"
        android:textColor="@color/amarillo_magi"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvForgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>
