<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_user_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    tools:context=".activities.CreateUserActivity">

    <!-- Logo grande, centrado en la parte superior -->
    <ImageView
        android:id="@+id/logoIconCreate"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/icono_magi"
        android:src="@drawable/logo_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <!-- Texto MAGI (logoText), justo debajo del icono -->
    <ImageView
        android:id="@+id/logoTextCreate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_magi"
        android:scaleType="centerInside"
        android:src="@drawable/logo_text"
        app:layout_constraintTop_toBottomOf="@id/logoIconCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <!-- Campo DNI -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutDniCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        app:boxStrokeColor="@color/gris_magi"
        app:hintTextColor="@color/amarillo_magi"
        app:passwordToggleEnabled="false"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/logoTextCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDniCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColorHint="@color/amarillo_magi"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo Nombre Completo -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNombreCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_completo"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/gris_magi"
        app:hintTextColor="@color/amarillo_magi"
        app:passwordToggleEnabled="false"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layoutDniCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNombreCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textColorHint="@color/amarillo_magi"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPasswordCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/gris_magi"
        app:hintTextColor="@color/amarillo_magi"
        app:passwordToggleEnabled="true"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layoutNombreCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPasswordCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/amarillo_magi"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo Repetir Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutRepeatPasswordCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/repetir_contrase_a"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/gris_magi"
        app:hintTextColor="@color/amarillo_magi"
        app:passwordToggleEnabled="true"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layoutPasswordCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editRepeatPasswordCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/amarillo_magi"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón Registrarse -->
    <Button
        android:id="@+id/buttonRegisterCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/amarillo_magi"
        android:text="@string/registrarse"
        android:textAllCaps="false"
        android:textColor="@color/gris_oscuro"
        app:layout_constraintTop_toBottomOf="@id/layoutRepeatPasswordCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Enlace para volver al Login si ya tiene cuenta -->
    <TextView
        android:id="@+id/tvLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ya_tienes_cuenta_iniciar_sesion"
        android:textColor="@color/amarillo_magi"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/buttonRegisterCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
