<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_settings_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/blanco">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blanco"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/logoText_toolbar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="25dp"
                android:src="@drawable/logo_text"/>

            <ImageView
                android:id="@+id/ic_menu_toolbar"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="25dp"
                android:src="@drawable/ic_menu"
                app:tint="@color/gris_oscuro_2"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <View
            android:id="@+id/toolbar_shadow"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:background="@drawable/toolbar_dropshadow"
            app:layout_constraintTop_toBottomOf="@id/topAppBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/toolbar_shadow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="32dp">

                <TextView
                    android:id="@+id/tvSettingsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ajustes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_notificaciones"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/activar_notificaciones"
                    android:checked="true"
                    app:layout_constraintTop_toBottomOf="@id/tvSettingsTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_change_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/cambiar_contraseña"
                    app:layout_constraintTop_toBottomOf="@id/switch_notificaciones"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:backgroundTint="@color/amarillo_magi"
                    android:textColor="@color/gris_oscuro"/>

                <TextView
                    android:id="@+id/tvAppVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/version_app_prefix"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintTop_toBottomOf="@id/btn_change_password"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_dashboard"
        app:itemIconTint="@color/amarillo_magi"
        app:itemTextColor="@color/gris_oscuro"/>

</androidx.drawerlayout.widget.DrawerLayout>
